--- a/Capstone Notebook.ipynb
+++ b/Capstone Notebook.ipynb
@@ -5,40 +5,67 @@
                 "collapsed": true
             },
             "cell_type": "markdown",
-            "source": "# Coursera Data Science Capstone project\nThis notebook will mainly be used for the capstone project work"
-        },
-        {
-            "metadata": {},
-            "cell_type": "code",
-            "source": "import pandas as pd\nimport numpy as np",
-            "execution_count": 2,
-            "outputs": []
-        },
-        {
-            "metadata": {},
-            "cell_type": "code",
-            "source": "print(\"Hello Capstone Project Course!\")",
-            "execution_count": 3,
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "text": "Hello Capstone Project Course!\n",
-                    "name": "stdout"
-                }
+            "source": [
+                "# Coursera Data Science Capstone project\n",
+                "This notebook will mainly be used for the capstone project work"
             ]
         },
         {
             "metadata": {},
             "cell_type": "code",
-            "source": "",
-            "execution_count": null,
+            "source": [
+                "import pandas as pd\n",
+                "import numpy as np"
+            ],
+            "execution_count": 1,
             "outputs": []
+        },
+        {
+            "metadata": {
+                "tags": []
+            },
+            "cell_type": "code",
+            "source": [
+                "print(\"Hello Capstone Project Course!\")"
+            ],
+            "execution_count": 2,
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": "Hello Capstone Project Course!\n"
+                }
+            ]
+        },
+        {
+            "metadata": {
+                "tags": []
+            },
+            "cell_type": "code",
+            "source": [
+                "print(\"testing whether the Github and IBM data studio sync works with my Visual Studio Code\")"
+            ],
+            "execution_count": 3,
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": "testing whether the Github and IBM data studio sync works with my Visual Studio Code\n"
+                }
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
         "kernelspec": {
-            "name": "python3",
-            "display_name": "Python 3.6",
+            "name": "python_defaultSpec_1596481236305",
+            "display_name": "Python 3.8.2 64-bit ('3.8.2': pyenv)",
             "language": "python"
         },
         "language_info": {
